; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c_esp_set_watchpoint.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c_esp_set_watchpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_set_watchpoint(i32 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* %6, align 4
  %16 = icmp sgt i32 %15, 1
  br i1 %16, label %17, label %19

17:                                               ; preds = %14, %4
  %18 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %18, i32* %5, align 4
  br label %61

19:                                               ; preds = %14
  %20 = load i32, i32* %9, align 4
  %21 = and i32 %20, 1073741823
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %24, i32* %5, align 4
  br label %61

25:                                               ; preds = %19
  store i32 63, i32* %11, align 4
  store i32 0, i32* %10, align 4
  br label %26

26:                                               ; preds = %38, %25
  %27 = load i32, i32* %10, align 4
  %28 = icmp slt i32 %27, 7
  br i1 %28, label %29, label %41

29:                                               ; preds = %26
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %10, align 4
  %32 = shl i32 1, %31
  %33 = icmp eq i32 %30, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %29
  br label %41

35:                                               ; preds = %29
  %36 = load i32, i32* %11, align 4
  %37 = shl i32 %36, 1
  store i32 %37, i32* %11, align 4
  br label %38

38:                                               ; preds = %35
  %39 = load i32, i32* %10, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %10, align 4
  br label %26

41:                                               ; preds = %34, %26
  %42 = load i32, i32* %10, align 4
  %43 = icmp eq i32 %42, 7
  br i1 %43, label %44, label %46

44:                                               ; preds = %41
  %45 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %45, i32* %5, align 4
  br label %61

46:                                               ; preds = %41
  %47 = load i32, i32* %11, align 4
  %48 = and i32 %47, 63
  %49 = load i32, i32* %9, align 4
  %50 = or i32 %48, %49
  store i32 %50, i32* %11, align 4
  %51 = load i32, i32* %6, align 4
  %52 = icmp eq i32 %51, 0
  br i1 %52, label %53, label %56

53:                                               ; preds = %46
  %54 = load i8*, i8** %7, align 8
  %55 = load i32, i32* %11, align 4
  call void asm sideeffect "wsr.dbreaka0 $0\0Awsr.dbreakc0 $1\0A", "r,r,~{dirflag},~{fpsr},~{flags}"(i8* %54, i32 %55) #1, !srcloc !2
  br label %59

56:                                               ; preds = %46
  %57 = load i8*, i8** %7, align 8
  %58 = load i32, i32* %11, align 4
  call void asm sideeffect "wsr.dbreaka1 $0\0Awsr.dbreakc1 $1\0A", "r,r,~{dirflag},~{fpsr},~{flags}"(i8* %57, i32 %58) #1, !srcloc !3
  br label %59

59:                                               ; preds = %56, %53
  %60 = load i32, i32* @ESP_OK, align 4
  store i32 %60, i32* %5, align 4
  br label %61

61:                                               ; preds = %59, %44, %23, %17
  %62 = load i32, i32* %5, align 4
  ret i32 %62
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 734, i32 755}
!3 = !{i32 850, i32 871}
